# deeplearning_ai-lang_graph

./: README.md  main.py  pyproject.toml
L3-Baseline_Email_Assistant/: agent-triage_with_hard_code.py  email_agent.py  main_agent.py  triage_agent.py
L4-Email_Assistant_with_Semantic_Memory/: base_triag.py  email_agent.py
L5-Email_Assistant_with_Semantic_Memory_and_Episodic_Memory/: email_agent.py  main_agent.py
L6-Email_Assistant_with_Semanti_Episodic_Procedural_Memory/: email_agent.py  main_agent.py
agent/: memory.py  prompt.py  tools.py
constants/: examples.py  prompt_templates.py  variables.py
schemas/: router.py  state.py
utils/: email.py  formator.py  open_ai.py
